section of login with password compelted
