# auth/auth_handler.go
@@ -23,7 +23,7 @@ func NewAuthHandler(service AuthServiceInterface) *AuthHandler {
 func (a *AuthHandler) InitHandler(ech *echo.Echo) {
 	group := ech.Group("auth")
 
-	group.POST("/login", a.HandleLogin)
+	group.POST("/login/password", a.LoginWithPassword)
 	group.POST("/login/send-otp", a.SendOtpForLoging)
 	group.POST("/login/validate-otp", a.OtpLoginValidation)
 	group.POST("/register/send-otp", a.OtpRegistering)
@@ -124,63 +124,6 @@ func (a *AuthHandler) OtpRegisterValidation(ctx echo.Context) error {
 	return ctx.JSON(http.StatusOK, res)
 }
 
-// @Summary Login
-// @Description User registration
-// @Tags auth
-// @Accept json
-// @Produce json
-// @Param register body LoginCredential true "Register request"
-// @Success 201 {object} AuthResponse
-// @Router /auth/login [post]
-func (a *AuthHandler) HandleLogin(ctx echo.Context) error {
-	var userReq LoginCredential
-
-	// bind json to struct
-	if err := ctx.Bind(&userReq); err != nil {
-		fmt.Println(err)
-		return echo.NewHTTPError(http.StatusBadRequest, constants.InvalidInputFormat)
-	}
-
-	// validate data
-	vs := utils.GetValidator()
-	vsErrs := vs.Validate(userReq)
-	if len(vsErrs) > 0 {
-		return echo.NewHTTPError(http.StatusBadRequest, map[string]interface{}{
-			"errors": vsErrs,
-		})
-	}
-
-	// get user data
-	userData, err := a.service.Login(userReq)
-	if err != nil {
-		return echo.NewHTTPError(err.Code, err.Message)
-	}
-	// generate new jwt tokens
-	claims := types.UserDataJwtClaims{
-		Phone: userReq.Phone,
-		Id:    userData.ID,
-		Role:  userData.Role,
-	}
-	jwt, jwtErr := utils.GenerateJwt(claims)
-	if jwtErr != nil {
-		fmt.Println(jwtErr)
-		return echo.NewHTTPError(http.StatusInternalServerError, constants.InternalServerError)
-	}
-
-	res := &AuthResponse{
-		Phone:      userData.Phone,
-		First_name: userData.FirstName,
-		Last_name:  userData.LastName,
-		ID:         userData.ID,
-		Role:       userData.Role,
-		Jwt: types.JwtTokens{
-			Token:        jwt.Token,
-			RefreshToken: jwt.RefreshToken,
-		},
-	}
-	return ctx.JSON(http.StatusOK, res)
-}
-
 // @Summary login with otp
 // @Tags auth
 // @Accept json
@@ -261,6 +204,58 @@ func (a *AuthHandler) OtpLoginValidation(ctx echo.Context) error {
 		return echo.NewHTTPError(http.StatusInternalServerError, constants.InternalServerError)
 	}
 
+	res := &AuthResponse{
+		Phone:      user.Phone,
+		First_name: user.FirstName,
+		Last_name:  user.LastName,
+		ID:         user.ID,
+		Role:       user.Role,
+		Jwt: types.JwtTokens{
+			Token:        jwt.Token,
+			RefreshToken: jwt.RefreshToken,
+		},
+	}
+	return ctx.JSON(http.StatusOK, res)
+}
+
+// @Description login with password
+// @Tags auth
+// @Accept json
+// @Produce json
+// @Param register body LoginCredential true "login with password"
+// @Router /auth/login/password [post]
+func (a *AuthHandler) LoginWithPassword(ctx echo.Context) error {
+	var data LoginCredential
+
+	// bind json to struct
+	if err := ctx.Bind(&data); err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, constants.InvalidInputFormat)
+	}
+
+	// validate
+	vs := utils.GetValidator()
+	vsErrs := vs.Validate(data)
+	if len(vsErrs) > 0 {
+		return echo.NewHTTPError(http.StatusBadRequest, map[string]interface{}{
+			"errors": vsErrs,
+		})
+	}
+
+	// get user data
+	user, err := a.service.LoginWithPassword(&data)
+	if err != nil {
+		return echo.NewHTTPError(err.Code, err.Message)
+	}
+
+	claim := types.UserDataJwtClaims{
+		Id:    user.ID,
+		Role:  user.Role,
+		Phone: user.Phone,
+	}
+	jwt, jwtErr := utils.GenerateJwt(claim)
+	if jwtErr != nil {
+		return echo.NewHTTPError(http.StatusInternalServerError, constants.InternalServerError)
+	}
 	res := &AuthResponse{
 		Phone:      user.Phone,
 		First_name: user.FirstName,
