# docs/swagger.yaml
@@ -1,35 +1,10 @@
 basePath: /
 definitions:
-  auth.AuthResponse:
-    properties:
-      first_name:
-        maxLength: 30
-        minLength: 3
-        type: string
-      id:
-        type: integer
-      jwt:
-        $ref: '#/definitions/types.JwtTokens'
-      last_name:
-        maxLength: 40
-        minLength: 3
-        type: string
-      phone:
-        maxLength: 11
-        minLength: 11
-        type: string
-      role:
-        type: string
-    required:
-    - first_name
-    - last_name
-    - phone
-    type: object
   auth.LoginCredential:
     properties:
       password:
-        maxLength: 20
-        minLength: 3
+        maxLength: 40
+        minLength: 5
         type: string
       phone:
         maxLength: 11
@@ -81,13 +56,6 @@ definitions:
         type: integer
     required:
     - name
-    type: object
-  types.JwtTokens:
-    properties:
-      refreshToken:
-        type: string
-      token:
-        type: string
     type: object
   user.ChangePaasword:
     properties:
@@ -303,13 +271,13 @@ paths:
       responses: {}
       tags:
       - articles
-  /auth/login:
+  /auth/login/password:
     post:
       consumes:
       - application/json
-      description: User registration
+      description: login with password
       parameters:
-      - description: Register request
+      - description: login with password
         in: body
         name: register
         required: true
@@ -317,12 +285,7 @@ paths:
           $ref: '#/definitions/auth.LoginCredential'
       produces:
       - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/auth.AuthResponse'
-      summary: Login
+      responses: {}
       tags:
       - auth
   /auth/login/send-otp:
